sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
    if(plusPetit(i-1,i)){
                 ^AlgGnomeSort:5: error: not found: value i
    if(plusPetit(i-1,i)){
                     ^AlgGnomeSort:6: error: not found: value i
      i = i+1;
      ^AlgGnomeSort:9: error: not found: value i
      echange(i,i-1)
              ^AlgGnomeSort:9: error: not found: value i
      echange(i,i-1)
                ^