sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var pos = 1;
  while(pos<getNombreValeurs){
    if(plusPetit(i-1,i)){
      i = i+1;
    }
    else{
      echange(i,i-1)
    	if(pos>1){
        pos = pos -1;
      }
    }
  }
}